// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Generates GraphQL schema 1`] = `
"directive @requireAuth(roles: [String]) on FIELD_DEFINITION

directive @skipAuth on FIELD_DEFINITION

scalar BigInt

scalar Byte

"""
The Cedar Root Schema

Defines details about Cedar such as the current user and version information.
"""
type Cedar {
  """The current user."""
  currentUser: JSON

  """The version of Prisma."""
  prismaVersion: String

  """The version of CedarJS."""
  version: String
}

scalar Date

scalar DateTime

scalar File

scalar JSON

scalar JSONObject

type Mutation {
  createTodo(body: String!): Todo
  renameTodo(body: String!, id: Int!): Todo
  updateTodoStatus(id: Int!, status: String!): Todo
}

"""About the Cedar queries."""
type Query {
  """Fetches the Cedar root schema."""
  cedar: Cedar
  currentUser: JSON

  """Fetches the Cedar root schema."""
  redwood: Redwood @deprecated(reason: "Use 'cedar' instead.")
  todos: [Todo]
  todosCount: Int!
}

type Redwood {
  """The current user."""
  currentUser: JSON @deprecated(reason: "Use the Cedar type instead.")

  """The version of Prisma."""
  prismaVersion: String @deprecated(reason: "Use the Cedar type instead.")

  """The version of CedarJS."""
  version: String @deprecated(reason: "Use the Cedar type instead.")
}

scalar Time

type Todo {
  body: String!
  id: Int!
  status: String!
}"
`;

exports[`Generates complete schema with directives and subscriptions while excluding test files 1`] = `
"directive @requireAuth(roles: [String]) on FIELD_DEFINITION

directive @skipAuth on FIELD_DEFINITION

scalar BigInt

scalar Byte

"""
The Cedar Root Schema

Defines details about Cedar such as the current user and version information.
"""
type Cedar {
  """The current user."""
  currentUser: JSON

  """The version of Prisma."""
  prismaVersion: String

  """The version of CedarJS."""
  version: String
}

scalar Date

scalar DateTime

scalar File

scalar JSON

scalar JSONObject

type Mutation {
  createTodo(title: String!): Todo!
  deleteTodo(id: Int!): Todo!
  updateTodo(completed: Boolean!, id: Int!): Todo!
}

"""About the Cedar queries."""
type Query {
  """Fetches the Cedar root schema."""
  cedar: Cedar

  """Fetches the Cedar root schema."""
  redwood: Redwood @deprecated(reason: "Use 'cedar' instead.")
  todo(id: Int!): Todo
  todos: [Todo!]!
}

type Redwood {
  """The current user."""
  currentUser: JSON @deprecated(reason: "Use the Cedar type instead.")

  """The version of Prisma."""
  prismaVersion: String @deprecated(reason: "Use the Cedar type instead.")

  """The version of CedarJS."""
  version: String @deprecated(reason: "Use the Cedar type instead.")
}

type Subscription {
  countdown: Int!
  newMessage: String!
}

scalar Time

type Todo {
  completed: Boolean!
  id: Int!
  title: String!
}"
`;

exports[`Includes live query directive if serverful and realtime  1`] = `
""""
Instruction for establishing a live connection that is updated once the underlying data changes.
"""
directive @live(
  """Whether the query should be live or not."""
  if: Boolean = true

  """
  Propose a desired throttle interval ot the server in order to receive updates to at most once per "throttle" milliseconds. The server must not accept this value.
  """
  throttle: Int
) on QUERY

directive @requireAuth(roles: [String]) on FIELD_DEFINITION

directive @skipAuth on FIELD_DEFINITION

scalar BigInt

scalar Byte

"""
The Cedar Root Schema

Defines details about Cedar such as the current user and version information.
"""
type Cedar {
  """The current user."""
  currentUser: JSON

  """The version of Prisma."""
  prismaVersion: String

  """The version of CedarJS."""
  version: String
}

scalar Date

scalar DateTime

scalar File

scalar JSON

scalar JSONObject

type Mutation {
  createTodo(body: String!): Todo
  renameTodo(body: String!, id: Int!): Todo
  updateTodoStatus(id: Int!, status: String!): Todo
}

"""About the Cedar queries."""
type Query {
  """Fetches the Cedar root schema."""
  cedar: Cedar
  currentUser: JSON

  """Fetches the Cedar root schema."""
  redwood: Redwood @deprecated(reason: "Use 'cedar' instead.")
  todos: [Todo]
  todosCount: Int!
}

type Redwood {
  """The current user."""
  currentUser: JSON @deprecated(reason: "Use the Cedar type instead.")

  """The version of Prisma."""
  prismaVersion: String @deprecated(reason: "Use the Cedar type instead.")

  """The version of CedarJS."""
  version: String @deprecated(reason: "Use the Cedar type instead.")
}

scalar Time

type Todo {
  body: String!
  id: Int!
  status: String!
}"
`;
